# NDK_DEMO

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hsae/bowin/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hsae/bowin/ndkdemo/: JNIUtils.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  com_hsae_bowin_ndkdemo_JNIUtils.h  hello.cpp  native_hello.c
app/src/test/java/com/hsae/bowin/ndkdemo/: ExampleUnitTest.java
c2java/: build.gradle
c2java/src/androidTest/java/com/hsae/bowin/c2java/: ExampleInstrumentedTest.java
c2java/src/main/: AndroidManifest.xml
c2java/src/main/java/com/hsae/bowin/c2java/: C2java.java  MainActivity.java
c2java/src/main/jni/: CMakeLists.txt  com_hsae_bowin_c2java_C2java.h  native_lib.c
c2java/src/main/res/values/: strings.xml
c2java/src/test/java/com/hsae/bowin/c2java/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
java2c1/: build.gradle
java2c1/src/androidTest/java/com/hsae/bowin/java2c1/: ExampleInstrumentedTest.java
java2c1/src/main/: AndroidManifest.xml
java2c1/src/main/java/com/hsae/bowin/java2c1/: MainActivity.java  NativeC.java
java2c1/src/main/jni/: CMakeLists.txt  com_hsae_bowin_java2c1_NativeC.h  native_lib.c
java2c1/src/main/res/values/: strings.xml
java2c1/src/test/java/com/hsae/bowin/java2c1/: ExampleUnitTest.java
